@@ -177,6 +177,7 @@ if(okB3 <- file.exists(DN <- file.path(pB3p, "DESCRIPTION"))) {
 }
 p.lis <- c(if("Matrix" %in% row.names(installed.packages(.Library)))
                c("pkgA", "pkgB", if(okB2) "pkgB2", if(okB3) "pkgB3", "pkgC"),
+           "PR17501",
            "exNSS4", "exNSS4nil", "exSexpr")
 p.lis; (pBlis <- grep("^pkgB", p.lis, value=TRUE))
 InstOpts <- list("exSexpr" = "--html")
@@ -241,6 +242,27 @@ stopifnot(exprs = {
     res[,"LibPath"] == "myLib"
 })
 ### Specific Tests on our "special" packages: ------------------------------
+
+tf <- tempfile("chk_donttest")
+## why does this not work (not catch stderr)?  textConnection("checkTxt", open="w")
+system.time(status <-
+        tools:::run_Rcmd(c("check", "PR17501_1.0.tar.gz", "--no-manual"),
+                         out=tf, timeout = 30)) # see 5--7 sec
+status # 0, still (for now)
+stopifnot(exprs = {
+    is.character(exLines <-
+                     readLines(file.path("PR17501.Rcheck", "PR17501-full-Ex.R")))
+    { str(exLines); length(exLines) > 20 } # str(): diagnostic in case
+    is.integer(i <- grep("^R\\.Version\\( *# missing closing paren", exLines))
+    grepl("^## No test", exLines[i-1])
+    { str(tlines <- readLines(tf)); length(tlines) > 20 }
+    length(iw <- grep("^Warning: parse error", tlines)) == 1
+    (lenN <- length(print(iN <- grep("^[1-9][0-9]:", tlines)))) >= 2
+    iN - iw == seq_len(lenN) # these (3) lines come immediately after 'Warning',
+    ## and "related" to the some 'missing .. paren' above:
+    8 <= print(iw - i) & iw - i <= 20 # see ~14
+}) ## failed in R <= 4.1.1
+
 
 ## These used to fail because of the sym.link in pkgA
 if("pkgA" %in% p.lis && dir.exists(pkgApath)) {
@@ -450,16 +472,21 @@ if(isWIN){
 checkMatrix <- function(x, n) stopifnot(is.matrix(x), nrow(x) == n)
 
 docompare(latestOnly = TRUE)
-checkMatrix(available.packages(repourl, filters = list()), 2)
+str(ap <- available.packages(repourl, filters = list()))
+checkMatrix(ap, 2)
 
 docompare(latestOnly = FALSE)
-checkMatrix(available.packages(repourl, filters = list()), 4)
+str(ap <- available.packages(repourl, filters = list()))
+checkMatrix(ap, 4)
 
 docompare(latestOnly = TRUE, strict = FALSE)
-checkMatrix(available.packages(repourl, filters = list()), 2)
+str(ap <- available.packages(repourl, filters = list()))
+checkMatrix(ap, 2)
 
 docompare(latestOnly = FALSE, strict = FALSE)
-checkMatrix(available.packages(repourl, filters = list()), 4)
+str(ap <- available.packages(repourl, filters = list()))
+checkMatrix(ap, 4)
+
 
 
 
